--- a/src/main/resources/templates/dog/admin_dogInfo.html
+++ b/src/main/resources/templates/dog/admin_dogInfo.html
@@ -21,10 +21,10 @@
                                 <th>성별</th>
                             </tr>
                         </thead>
-                        <tbody id="tbody">
+                        <tbody id="tbody" th:each="member : ${member}">
                             <tr th:each="dog : ${dogs}">
                                 <td th:text="${dog.id}"/></td>
-                                <td th:text="${dog.name}"></td>
+                                <td><a th:href="@{/admin/member/{id}/dogs/settings/{dog_id}(id = ${member.id}, dog_id = ${dog.id})}" th:text="${dog.name}"></a></td>
                                 <td th:text="${dog.type}"></td>
                                 <td th:text="${dog.age}"></td>
                                 <td th:text="${dog.birth}"></td>
