Modify : dog Value -> Type, Add : gitignore

--- a/src/main/resources/templates/members/dogs/dogInfo.html
+++ b/src/main/resources/templates/members/dogs/dogInfo.html
@@ -25,7 +25,7 @@
                 <tr th:each="dog : ${dogs}">
                     <td><a th:href = "@{/member/dogs/settings/{id}(id = ${dog.id})}" th:text="${dog.name}"></a></td>
                     <td th:text="${dog.age}"></td>
-                    <td th:text="${dog.value}"></td>
+                    <td th:text="${dog.type}"></td>
                     <td th:text="${dog.gender}"></td>
                     <td th:text="${dog.birth}"></td>
                 </tr>
