--- a/src/main/resources/templates/members/dogs/dogSignUp.html
+++ b/src/main/resources/templates/members/dogs/dogSignUp.html
@@ -46,7 +46,7 @@
 
                 <div class="form-group">
                     <label th:for="value">종 선택</label>
-                    <select th:field="*{value}">
+                    <select th:field="*{type}">
                         <option th:value="포메라니안">포메라니안</option>
                         <option th:value="치와와">치와와</option>
                         <option th:value="비글">비글</option>
