--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -55,7 +55,7 @@
                 <div class="row align-items-center">
                     <div class="col-4 col-md-4 col-xl-6">
                         <div id="logo">
-                            <a href="/"><img src="../../../static/leopet/img/logo.png" alt="구해독_로고" /></a>
+                            <a href="/"><img src="/../../../static/leopet/img/logo.png" alt="구해독_로고" /></a>
                         </div>
                     </div>
                     <div class="col-8 col-md-8 col-xl-6 ">
