feat: Implement Dog settings, deletion (admin)

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<footer th:fragment="footerFragment">
+    <footer th:fragment="footerFragment" class="footer_area padding_top">
     <!-- footer part start-->
-    <footer class="footer_area padding_top">
         <div class="container">
             <div class="row justify-content-center ">
                 <div class="col-lg-8 col-xl-6">
@@ -42,25 +41,24 @@
                 </div>
             </div>
         </div>
-    </footer>
-    <!-- footer part end-->
+        <!-- footer part end-->
 
-    <!-- jquery plugins here-->
-    <!-- jquery -->
-    <script src="/../static/leopet/js/jquery-1.12.1.min.js"></script>
-    <!-- popper js -->
-    <script src="/../static/leopet/js/popper.min.js"></script>
-    <!-- bootstrap js -->
-    <script src="/../static/leopet/js/bootstrap.min.js"></script>
-    <!-- counterup js -->
-    <script src="/../static/leopet/js/jquery.counterup.min.js"></script>
-    <!-- waypoints js -->
-    <script src="/../static/leopet/js/waypoints.min.js"></script>
-    <!-- easing js -->
-    <script src="/../static/leopet/js/jquery.magnific-popup.js"></script>
-    <!-- particles js -->
-    <script src="/../static/leopet/js/owl.carousel.min.js"></script>
-    <!-- custom js -->
-    <script src="/../static/leopet/js/custom.js"></script>
-</footer>
+        <!-- jquery plugins here-->
+        <!-- jquery -->
+        <script src="/../static/leopet/js/jquery-1.12.1.min.js"></script>
+        <!-- popper js -->
+        <script src="/../static/leopet/js/popper.min.js"></script>
+        <!-- bootstrap js -->
+        <script src="/../static/leopet/js/bootstrap.min.js"></script>
+        <!-- counterup js -->
+        <script src="/../static/leopet/js/jquery.counterup.min.js"></script>
+        <!-- waypoints js -->
+        <script src="/../static/leopet/js/waypoints.min.js"></script>
+        <!-- easing js -->
+        <script src="/../static/leopet/js/jquery.magnific-popup.js"></script>
+        <!-- particles js -->
+        <script src="/../static/leopet/js/owl.carousel.min.js"></script>
+        <!-- custom js -->
+        <script src="/../static/leopet/js/custom.js"></script>
+    </footer>
 </html>
