--- a/src/main/resources/templates/dog/admin_dogInfo.html
+++ b/src/main/resources/templates/dog/admin_dogInfo.html
@@ -24,7 +24,7 @@
                         <tbody id="tbody" th:each="member : ${member}">
                             <tr th:each="dog : ${dogs}">
                                 <td th:text="${dog.id}"/></td>
-                                <td><a th:href="@{/admin/member/{id}/dogs/settings/{dog_id}(id = ${member.id}, dog_id = ${dog.id})}" th:text="${dog.name}"></a></td>
+                                <td><a th:href="@{/admin/dogs/settings/{id}(id = ${dog.id})}" th:text="${dog.name}"></a></td>
                                 <td th:text="${dog.type}"></td>
                                 <td th:text="${dog.age}"></td>
                                 <td th:text="${dog.birth}"></td>
