--- a/src/main/resources/static/leopet/css/style.css
+++ b/src/main/resources/static/leopet/css/style.css
@@ -5127,4 +5127,17 @@ h6 {
   color: #FF5B5B;
 }
 
+div.form-test > select{
+  width: 200px;
+  padding: .8em .5em;
+  border: 1px solid #999;
+  font-family: inherit;
+  background: url('arrow.jpg') no-repeat 95% 50%;
+  border-radius: 0px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+
 /*# sourceMappingURL=../css/style.map */
