--- a/src/main/resources/templates/members/dogs/dogInfo.html
+++ b/src/main/resources/templates/members/dogs/dogInfo.html
@@ -14,8 +14,8 @@
                 <tr>
                     <th>이름</th>
                     <th>나이</th>
+                    <th>견종</th>
                     <th>성별</th>
-                    <th>종</th>
                     <th>생일</th>
                 </tr>
                 </thead>
@@ -23,7 +23,7 @@
 
 
                 <tr th:each="dog : ${dogs}">
-                    <td><a th:href = "@{/member/dogs/settings/{id}(id = ${dog.id})}" th:text="${dog.name}"></a></td>
+                    <td><a th:href = "@{/dogs/settings/{id}(id = ${dog.id})}" th:text="${dog.name}"></a></td>
                     <td th:text="${dog.age}"></td>
                     <td th:text="${dog.type}"></td>
                     <td th:text="${dog.gender}"></td>
