--- a/src/main/resources/templates/members/dogs/dogSignUp.html
+++ b/src/main/resources/templates/members/dogs/dogSignUp.html
@@ -45,7 +45,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label th:for="value">종 선택</label>
+                    <label th:for="type">견종 선택</label>
                     <select th:field="*{type}">
                         <option th:value="포메라니안">포메라니안</option>
                         <option th:value="치와와">치와와</option>
@@ -62,9 +62,10 @@
                 <div class="container-login100-form-btn">
                     <div class="wrap-login100-form-btn">
                         <div class="login100-form-bgbtn"></div>
-                        <button class="login100-form-btn" type="submit">
+                        <button  class="login100-form-btn" type="submit">
                             반려견 정보등록
                         </button>
+
                     </div>
                 </div>
             </form>
