--- a/src/main/resources/templates/members/dogs/dogModify.html
+++ b/src/main/resources/templates/members/dogs/dogModify.html
@@ -17,14 +17,22 @@
                     <input type="text" id="dogName" th:field="${dog.name}" class="form-control" required>
                 </div>
 
-                <div class="form-group">
-                    <label th:for="email">성별</label>
-                    <input type="email" id="dogGender" th:field="${dog.gender}" class="form-control" readonly required>
+                <div>
+                    <label th:for="gender">성별</label>
+                </div>
+                <div class="form-option">
+                    <select id = "dogGender" th:field="${dog.gender}">
+                        <option th:value="'수컷'">수컷</option>
+                        <option th:value="'암컷'">암컷</option>
+                    </select>
                 </div>
 
-                <div class="form-test">
+
+                <div>
                     <label th:for="birth">나이</label>
-                    <select  id="dogAge" th:field="${dog.age}" >
+                </div>
+                <div class="form-option">
+                    <select  id="dogAge" th:field="${dog.age}">
                         <option th:value="'생후 12개월 미만'">생후 12개월 미만</option>
                         <option th:value="'1~3세미만'">1~3세미만</option>
                         <option th:value="'3~7세미만'">3~7세미만</option>
@@ -39,19 +47,9 @@
                 </div>
 
 
-                <div class="form-test">
-                    <label th:for="text">견종</label>
-                    <select  id="dogType" th:field="${dog.type}" >
-                        <option th:value="포메라니안">포메라니안</option>
-                        <option th:value="치와와">치와와</option>
-                        <option th:value="비글">비글</option>
-                        <option th:value="요크셔테리어">요크셔테리어</option>
-                        <option th:value="불독">불독</option>
-                        <option th:value="골든리트리버">골든리트리버</option>
-                        <option th:value="웰시코기">웰시코기</option>
-                        <option th:value="말티즈">말티즈</option>
-                        <option th:value="시츄">시츄</option>
-                    </select>
+                <div class="form-group">
+                    <label th:for="birth">견종</label>
+                    <input type="text" id="dogType" th:field="${dog.type}" class="form-control" readonly required>
                 </div>
                 <br/>
 
@@ -65,7 +63,7 @@
                 <div class="container-login100-form-btn">
                     <div class="wrap-login100-form-btn">
                         <div class="login100-form-bgbtn"></div>
-                        <a th:href="'javascript:deleteDog()'" class="login100-form-btn">탈퇴하기</a>
+                        <a th:href="'javascript:deleteDog()'" class="login100-form-btn">삭제하기</a>
                     </div>
                 </div>
             </form>
@@ -77,17 +75,16 @@
 
 
     function updateDog() {
-        var data = {                                // 이름, 이메일, 생일 변경 불가
+        let data = {                                // 이름, 이메일, 생일 변경 불가
             age: $("#dogAge").val(),     // 비밀번호, 전화번호, 주소, 상세주소, 참고항목 변경 가능
             name: $("#dogName").val(),
-            type: $("#dogType").val(),
-            id: $("#dogId").val(),
+            gender: $("#dogGender").val(),
         };
 
         console.log(data.type);
 
 
-        var id = $("#dogId").val();
+        let id = $("#dogId").val();
 
         $.ajax({
             type: 'PUT',
