fix: Keep modifying the routing issue for My page (admin)

--- a/src/main/resources/templates/members/dogs/dogModify.html
+++ b/src/main/resources/templates/members/dogs/dogModify.html
@@ -75,10 +75,10 @@
 
 
     function updateDog() {
-        let data = {                                // 이름, 이메일, 생일 변경 불가
-            age: $("#dogAge").val(),     // 비밀번호, 전화번호, 주소, 상세주소, 참고항목 변경 가능
+        let data = {
             name: $("#dogName").val(),
             gender: $("#dogGender").val(),
+            age: $("#dogAge").val()
         };
 
         console.log(data.type);
