--- a/src/main/resources/templates/adminAuth/admin_myPage.html
+++ b/src/main/resources/templates/adminAuth/admin_myPage.html
@@ -5,10 +5,12 @@
         <header th:replace="fragments/header :: headerFragment"></header>
 
         <div class="limiter">
-            <div class="container-login100" style="background-image: url('../../static/images/bg-01.jpg');">
+            <div class="container-login100" style="background-image: url('/../../static/images/bg-01.jpg');">
                 <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
                     <form class="login100-form validate-form">
                         <span class="login100-form-title p-b-49">정보조회</span>
+
+                        <input type="text" id="admin" th:field="${admin.id}" hidden="true">
 
                         <div class="form-group">
                             <label th:for="name">이름</label>
@@ -51,21 +53,21 @@
         <div id="dropDownSelect1"></div>
 
         <!--===============================================================================================-->
-        <script src="../../static/vendor/jquery/jquery-3.2.1.min.js"></script>
+        <script src="/../../static/vendor/jquery/jquery-3.2.1.min.js"></script>
         <!--===============================================================================================-->
-        <script src="../../static/vendor/animsition/js/animsition.min.js"></script>
+        <script src="/../../static/vendor/animsition/js/animsition.min.js"></script>
         <!--===============================================================================================-->
-        <script src="../../static/vendor/bootstrap/js/popper.js"></script>
-        <script src="../../static/vendor/bootstrap/js/bootstrap.min.js"></script>
+        <script src="/../../static/vendor/bootstrap/js/popper.js"></script>
+        <script src="/../../static/vendor/bootstrap/js/bootstrap.min.js"></script>
         <!--===============================================================================================-->
-        <script src="../../static/vendor/select2/select2.min.js"></script>
+        <script src="/../../static/vendor/select2/select2.min.js"></script>
         <!--===============================================================================================-->
-        <script src="../../static/vendor/daterangepicker/moment.min.js"></script>
-        <script src="../../static/vendor/daterangepicker/daterangepicker.js"></script>
+        <script src="/../../static/vendor/daterangepicker/moment.min.js"></script>
+        <script src="/../../static/vendor/daterangepicker/daterangepicker.js"></script>
         <!--===============================================================================================-->
-        <script src="../../static/vendor/countdowntime/countdowntime.js"></script>
+        <script src="/../../static/vendor/countdowntime/countdowntime.js"></script>
         <!--===============================================================================================-->
-        <script src="../../static/js/main.js"></script>
+        <script src="/../../static/js/main.js"></script>
 
         <footer th:replace="fragments/footer :: footerFragment"></footer>
     </body>
