--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -103,7 +103,7 @@
                                         <a sec:authorize="isAuthenticated()" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">마이페이지</a>
                                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                             <a sec:authorize="hasRole('ROLE_MEMBER')" class="dropdown-item" th:href="@{/member/mypage}">정보조회</a>
-                                            <a sec:authorize="hasRole('ROLE_ADMIN')" class="dropdown-item" th:href="@{/admin/members}">정보조회</a>
+                                            <a sec:authorize="hasRole('ROLE_ADMIN')" class="dropdown-item" th:href="@{/admin/mypage}">정보조회</a>
 
                                             <a sec:authorize="hasRole('ROLE_ADMIN')" class="dropdown-item" href="#">관리자 탈퇴</a>
 
