--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -87,7 +87,7 @@
                                     </li>
 
                                     <li class="nav-item">
-                                        <a sec:authorize="hasRole('ROLE_MEMBER')" class="nav-link" href="#">동물병원 예약</a>
+                                        <a sec:authorize="hasRole('ROLE_MEMBER')" class="nav-link" th:href="@{/member/reserves}">동물병원 예약</a>
                                     </li>
 
                                     <li class="nav-item dropdown">
