feat : Change home design

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-    <footer th:fragment="footerFragment" class="footer_area padding_top">
+    <footer th:fragment="footerFragment" class="footer_area padding_top" id="contactus">
     <!-- footer part start-->
         <div class="container">
             <div class="row justify-content-center ">
