--- a/src/main/resources/templates/dog/admin_dogSettings.html
+++ b/src/main/resources/templates/dog/admin_dogSettings.html
@@ -121,7 +121,7 @@
                 }).done(function() {
                     console.log(data);
                     alert('정보수정 되었습니다!');
-                    window.location.href = '/admin/members';
+                    window.location.href = '/admin/dogs/settings/' + id;
                 }).fail(function(request, status, error) {
                     alert(JSON.stringify(error));
                     window.location.href = '/admin/dogs/settings/' + id;
