--- a/src/main/resources/templates/members/dogs/dogSignUp.html
+++ b/src/main/resources/templates/members/dogs/dogSignUp.html
@@ -85,24 +85,24 @@
 
 
 <!--===============================================================================================-->
-<script src="../../../static/vendor/jquery/jquery-3.2.1.min.js"></script>
+<script src="/../../../static/vendor/jquery/jquery-3.2.1.min.js"></script>
 <!--===============================================================================================-->
-<script src="../../../static/vendor/animsition/js/animsition.min.js"></script>
+<script src="/../../../static/vendor/animsition/js/animsition.min.js"></script>
 <!--===============================================================================================-->
-<script src="../../../static/vendor/bootstrap/js/popper.js"></script>
-<script src="../../../static/vendor/bootstrap/js/bootstrap.min.js"></script>
+<script src="/../../../static/vendor/bootstrap/js/popper.js"></script>
+<script src="/../../../static/vendor/bootstrap/js/bootstrap.min.js"></script>
 <!--===============================================================================================-->
-<script src="../../../static/vendor/select2/select2.min.js"></script>
+<script src="/../../../static/vendor/select2/select2.min.js"></script>
 <!--===============================================================================================-->
-<script src="../../../static/vendor/daterangepicker/moment.min.js"></script>
-<script src="../../../static/vendor/daterangepicker/daterangepicker.js"></script>
+<script src="/../../../static/vendor/daterangepicker/moment.min.js"></script>
+<script src="/../../../static/vendor/daterangepicker/daterangepicker.js"></script>
 <!--===============================================================================================-->
-<script src="../../../static/vendor/countdowntime/countdowntime.js"></script>
+<script src="/../../../static/vendor/countdowntime/countdowntime.js"></script>
 <!--===============================================================================================-->
-<script src="../../../static/js/main.js"></script>
+<script src="/../../../static/js/main.js"></script>
 
 <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
-<script src="../../static/js/postcode-api.js"></script>
+<script src="/../../static/js/postcode-api.js"></script>
 
 <footer th:replace="fragments/footer :: footerFragment"></footer>
 </body>
