--- a/src/main/resources/templates/dog/admin_dogSettings.html
+++ b/src/main/resources/templates/dog/admin_dogSettings.html
@@ -99,7 +99,7 @@
             function updateDog() {
                 console.log("확인");
 
-                var data = {                          // 견종 변경 불가
+                let data = {                          // 견종 변경 불가
                     name: $("#dogName").val(),     // 이름, 나이, 생년월일, 성별 변경 가능
                     age: $("#dogAge").val(),
                     birth: $("#dogBirth").val(),
@@ -108,7 +108,7 @@
 
                 console.log(data);
 
-                var id = $("#dogId").val();
+                let id = $("#dogId").val();
 
                 console.log(id);
 
