--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -94,7 +94,7 @@
         <!-- contact-us event -->
         <script>
             function fnMove(){
-                var offset = $("#contactus").offset();
+                let offset = $("#contactus").offset();
                 $('html, body').animate({scrollTop : offset.top}, 700);
             }
         </script>
