--- a/src/main/resources/templates/members/reserves/reserveModify.html
+++ b/src/main/resources/templates/members/reserves/reserveModify.html
@@ -17,11 +17,17 @@
                     <input type="text" id="hosName" th:field="${reserve.name}" class="form-control" readonly required>
                 </div>
 
-                <div>
 
-                <div class="form-group">
-                    <label th:for="birth">방문날짜</label>
-                    <input type="date" id="hosDate" th:field="${reserve.date}" class="form-control" required>
+
+                <div class="form-option">
+                    <select id = "hosDate" th:field="${reserve.date}">
+                        <option th:value="'10:00~11:00'">10:00~11:00</option>
+                        <option th:value="'11:00~12:00'">11:00~12:00</option>
+                        <option th:value="'14:00~15:00'">14:00~15:00</option>
+                        <option th:value="'15:00~16:00'">15:00~16:00</option>
+                        <option th:value="'16:00~17:00'">16:00~17:00</option>
+                        <option th:value="'17:00~18:00'">17:00~18:00</option>
+                    </select>
                 </div>
 
 
@@ -36,10 +42,6 @@
                            maxlength="11" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" readonly required>
                 </div>
 
-                <div class="form-group">
-                    <label th:for="birth">영업시간</label>
-                    <input type="text" id="hosOptime" th:field="${reserve.op_time}" class="form-control" readonly required>
-                </div>
 
                 <div class="form-group">
                     <label th:for="birth">예약내용</label>
@@ -88,7 +90,7 @@
         }).done(function() {
             console.log(data);
             alert('정보수정 되었습니다!');
-            window.location.href = "/member/reserves/";
+            window.location.href = "/member/reservesInfo";
         }).fail(function(request, status, error) {
             alert(JSON.stringify(error));
             window.location.href = "/member/reserves/settings/" + id;
@@ -111,7 +113,7 @@
         }).done(function () {
             console.log(name);
             alert('삭제 되었습니다.');
-            window.location.href = '/member/reserves/';
+            window.location.href = '/member/reservesInfo/';
         }).fail(function (request, status, error) {
             alert(JSON.stringify(error));
             alert("code: " + request.status + "\n" + "message: " + request.responseText + "\n" + "error: " + error);
